Revision history for Mojo-Redis2

0.01
       * Started project
       * Add cool feature