@@ -1,0 +1,7 @@
+# Generated by git-ship. See 'git-ship --man' for help or https://github.com/jhthorsen/app-git-ship
+class = App::git::ship::perl
+project_name = 
+homepage = https://github.com/jhthorsen/mojo-redis2
+bugtracker = https://github.com/jhthorsen/mojo-redis2/issues
+license = artistic_2
+build_test_options = # Example: -l -j8
