@@ -1,27 +1,26 @@
+# Generated by git-ship. See 'git-ship --man' for help or https://github.com/jhthorsen/app-git-ship
 use ExtUtils::MakeMaker;
 WriteMakefile(
   NAME => 'Mojo::Redis2',
+  AUTHOR => 'Jan Henning Thorsen <jhthorsen@cpan.org>',
+  LICENSE => 'artistic_2',
   ABSTRACT_FROM => 'lib/Mojo/Redis2.pm',
   VERSION_FROM => 'lib/Mojo/Redis2.pm',
-  AUTHOR => 'Jan Henning Thorsen <jhthorsen@cpan.org>',
-  LICENSE => 'perl',
-  PREREQ_PM => {
-
-  },
-  BUILD_REQUIRES => {
-
-  },
+  EXE_FILES => [qw(  )],
   META_MERGE => {
     resources => {
-      license => 'http://dev.perl.org/licenses/',
-      homepage => 'https://metacpan.org/release/Mojo-Redis2',
-      bugtracker => 'https://github.com/marcusramberg/mojo-redis/issues',
-      repository => 'https://github.com/marcusramberg/mojo-redis.git',
+      bugtracker => 'https://github.com/jhthorsen/mojo-redis2/issues',
+      homepage => 'https://github.com/jhthorsen/mojo-redis2',
+      repository => 'https://github.com/jhthorsen/mojo-redis2.git',
     },
   },
-  test => {
-    TESTS => 't/*.t',
-  },
-  #MIN_PERL_VERSION => 5.10,
-  #EXE_FILES => ['bin/my-app'],
+  BUILD_REQUIRES => {
+  'Test::More' => '0.88'
+}
+,
+  PREREQ_PM => {
+  'Mojolicious' => '5.0'
+}
+,
+  test => { TESTS => 't/*.t' },
 );
