@@ -1,0 +1,3 @@
+# You can install this projct with curl -L http://cpanmin.us | perl - https://github.com/jhthorsen/mojo-redis2/archive/master.tar.gz
+requires "Mojolicious" => "5.0";
+test_requires "Test::More" => "0.88";
